# opengl_museum

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
Blender_Files/: cube.blend  cube.blend1  cube2.blend  cube2.blend1  cube2.mtl  final_cut.blend  final_cut.blend1  first_cut.blend  first_cut.blend1  first_cut_2.blend  first_cut_2.blend1  fourth_cut.mtl  rock.mtl  samich.mtl  second_cut.blend  second_cut.blend1  second_cut.mtl  second_cut_2.mtl  third_cut.blend  third_cut.blend1  third_cut.mtl
Blender_Files/SpaceShip/: ship1.blend1
first_project/: window  window.cbp
setup_environment/: CMakeLists.txt  kde-specific.txt  setup_environment.cbp
setup_environment/Glitter/Headers/: Object.h  camera.h  mesh.h  model.h  object.h  shader.h
setup_environment/Glitter/Sources/: Object.cpp  cube2.mtl  cube2_sub_disp.mtl  cube3.mtl  first_cut.mtl  fourth_cut.mtl  fragment.shader  main.cpp  rock.mtl  samich.mtl  second_cut.mtl  testRickHouse.mtl  third_cut.mtl  tmp.mtl  vertex.shader
setup_environment/setup_environment/: setup_environment
submission_files/: CMakeLists.txt
submission_files/code/: model.h  object.cpp
